   (setting, changing, deleting the value or some fields in an entry):
   this allows to detect stale information in a centralized fashion [#2010]

 - We lacked log information about changes of chroot jail (uncommon) and
   of UID/GID (everywhere), which makes troubleshooting harder (e.g. lack
   of access to config files or USB device nodes). Now we have it [#1694]

 - huawei-ups2000 is now known to support more devices, noted in docs and
   for auto-detection [#1448, #1684]

 - nutdrv_qx updates:
   * a `battery_voltage_reports_one_pack` driver option was added for devices
     which "natively" report a `battery.voltage` for a single battery pack or
     cell, not for the whole assembly [#1279]
   * the `voltronic_qs_protocol` should now accept both "V" (as before)
     and newly "H" dialects, which otherwise seem interchangeable [#1623]
   * the `armac` subdriver was enhanced to support devices with a different
     response pattern than previously expected per initial contribution.
     It was tested to work with Vultech V2000 and Armac PF1 series. [#1978]

 - nutdrv_qx and blazer updates:
   * extended default ranges for max battery voltage when guessing [#1279]

 - sms_ser, a driver for SMS Brazil UPS Protocol 1Phase, was introduced.
   NOTE: it may later become a subdriver under nutdrv_qx. [#2090]

 - usbhid-ups updates:
   * added support for `subdriver` configuration option, to select the
     USB HID subdriver for the device manually where automatic match
     does not suffice (e.g. new devices for which no `vendorid`/`productid`
     pair was built into any driver, or for different-capability devices
     with same interface chips, notably "phoenixtec/liebert" and "mge") [#1369]
   * cps-hid subdriver now applies same report descriptor fixing logic to
     devices with ProductID 0x0601 as done earlier for 0x0501, to get the
     correct output voltage data [#1497]
   * apc-hid subdriver now also supports ProductID 0x0004 [#1429]